--- a/index.html
+++ b/index.html
@@ -93,17 +93,19 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#news">NEWS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
-
                 </ul>
             </div>
         </div>
     </nav>
-
+    
     <!-- Top Section -->
     <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
         <div class="top-section-content">
@@ -133,6 +135,17 @@
         </div>
     </section>
     <!-- Home -->
+
+    <!-- News -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="news">
+        <div class="container px-5">
+            <header>
+                <h2 id="news-subtitle"><i class="bi bi-newspaper"></i>&nbsp;NEWS</h2>
+            </header>
+            <div class="main-body" id="news-md"></div>
+        </div>
+    </section>
+    <!-- News -->  
 
     <!-- Publications -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
