--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Academic Webpage" />
     <title id="title"></title>
 
+    <link rel="stylesheet" href="static/css/scholar.css">
+
     <!-- Icon -->
     <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
 
@@ -110,6 +112,18 @@
     <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
         <div class="top-section-content">
             <div class="container px-5">
+                <div class="container px-5">
+                    <header>
+                        <h2 id="home-subtitle"> </h2>
+                        </header>
+                    
+                    <div class="main-body" id="home-md"></div>
+        
+                    <div id="stats-grid" class="stats-grid">
+                        <div class="loading-text">Loading academic data...</div>
+                    </div>
+                    </div>
+            </section>
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
             </div>
         </div>
@@ -181,6 +195,7 @@
             </div>
         </div>
     </footer>
+    <script src="static/js/scholar.js"></script>
 
 </body>
 
