--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Academic Webpage" />
     <title id="title"></title>
 
-    <link rel="stylesheet" href="static/css/scholar.css">
+    <link rel="stylesheet" href="./static/css/scholar.css">
 
     <!-- Icon -->
     <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
@@ -26,8 +26,8 @@
         rel="stylesheet" />
 
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link type="text/css" href="static/css/styles.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/main.css" rel="stylesheet" />
+    <link type="text/css" href="./static/css/styles.css" rel="stylesheet" />
+    <link type="text/css" href="./static/css/main.css" rel="stylesheet" />
 
     <!-- Bootstrap core JS-->
     <script type="text/javascript" src="static/js/bootstrap.bundle.min.js"></script>
