--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </div>
     </footer>
-    <script src="static/js/scholar.js"></script>
+    <script src="./static/js/scholar.js?v=2025"></script>
 
 </body>
 
