--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Academic Webpage" />
     <title id="title"></title>
     
-    <link rel="stylesheet" href="static/css/scholar.css">
+    <link rel="stylesheet" href="./static/css/scholar.css?v=2025">
 
     <!-- Icon -->
     <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
